--- a/index.html
+++ b/index.html
@@ -2,215 +2,119 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>GuestHub | Beach House</title>
+<title>Beach House Guest</title>
 <style>
-:root {
-    --ios-blue: #007AFF;
-    --ios-bg: #f2f2f7;
-    --ios-card: #ffffff;
-    --ios-gray: #8e8e93;
-    --danger: #ff3b30;
-}
-body { margin:0; font-family:-apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto; background-color: var(--ios-bg); color: #000; padding-bottom: 90px;}
-#app-header { padding: 50px 20px 20px; background: linear-gradient(135deg, #00c6ff, #0072ff); color: white; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);}
-.header-title { font-size: 28px; font-weight: 800; margin: 0; }
-.header-date { opacity: 0.8; font-size: 14px; text-transform: uppercase; letter-spacing: 1px; }
-main { padding: 20px; max-width: 500px; margin: 0 auto; }
-.card { background: var(--ios-card); border-radius: 18px; padding: 20px; margin-bottom: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.04);}
-.bottom-nav { position: fixed; bottom: 0; width: 100%; background: rgba(255,255,255,0.95); backdrop-filter: blur(10px); display: flex; border-top: 0.5px solid #ccc; padding: 10px 0 25px; z-index: 1000; }
-.nav-btn { flex: 1; text-align: center; background: none; border: none; color: var(--ios-gray); font-size: 11px; display: flex; flex-direction: column; align-items: center; gap: 4px; }
-.nav-btn.active { color: var(--ios-blue); font-weight: bold; }
-.nav-icon { font-size: 20px; }
-#chat-window { height: 350px; overflow-y: auto; display: flex; flex-direction: column; gap: 12px; padding: 5px; }
-.message { max-width: 80%; padding: 10px 14px; border-radius: 18px; font-size: 15px; position: relative; }
-.message.guest { align-self: flex-end; background-color: var(--ios-blue); color: white; border-bottom-right-radius: 4px; }
-.message.host { align-self: flex-start; background-color: #e9e9eb; color: black; border-bottom-left-radius: 4px; }
-.timestamp { font-size: 10px; margin-top: 4px; opacity: 0.7; display: block; }
-#verification-overlay { position: fixed; inset: 0; background: var(--ios-bg); z-index: 2000; display: flex; align-items: center; justify-content: center; padding: 30px; }
-.btn-primary { background: var(--ios-blue); color: white; border: none; padding: 15px; border-radius: 12px; width: 100%; font-weight: 600; cursor: pointer; }
-.btn-outline { background: none; border: 1px solid var(--ios-gray); color: var(--ios-gray); padding: 15px; border-radius: 12px; width: 100%; margin-top: 10px; cursor: pointer; }
-.hidden { display: none !important; }
+  body { font-family: sans-serif; text-align:center; background:#f0f8ff; margin:0; padding:0; }
+  #time { font-size: 2rem; margin: 10px; }
+  #welcome { font-size: 1.5rem; margin: 20px; }
+  #calendar { margin: 20px; }
+  .dot { display:inline-block; width:15px; height:15px; border-radius:50%; margin:2px; }
+  .past { background:#ccc; }
+  .current { background:green; }
+  .upcoming { background:#eee; }
+  #days-left { font-size:1.2rem; margin:10px; }
+  #messages { margin:20px; }
+  #announcement { background:yellow; padding:10px; margin:10px; display:none; }
 </style>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-
-<div id="verification-overlay" class="hidden">
-    <div class="card" style="text-align: center; width: 100%;">
-        <h2 id="verify-title">Welcome!</h2>
-        <p id="verify-msg">Is this the <strong><span id="name-placeholder">---</span></strong> family?</p>
-        <button class="btn-primary" id="btn-verify-yes">Yes, that's us</button>
-        <button class="btn-outline" id="btn-verify-no">No, this is wrong</button>
-    </div>
+<div id="time"></div>
+<div id="welcome"></div>
+<div id="calendar"></div>
+<div id="days-left"></div>
+<div id="announcement"></div>
+<div id="messages">
+  <div id="chat"></div>
+  <input type="text" id="msg-input" placeholder="Type message...">
+  <button id="send-msg">Send</button>
 </div>
 
-<header id="app-header">
-    <div class="header-date" id="current-date"></div>
-    <h1 class="header-title">GuestHub</h1>
-</header>
-
-<main id="main-content">
-    <section id="tab-home" class="tab-view">
-        <div class="card" style="background: #fff9e6; border-left: 5px solid #ffcc00;">
-            <h4 style="margin:0">📢 Announcement</h4>
-            <p style="font-size: 14px; margin: 8px 0 0;">Check-out is at 11:00 AM. Please ensure the balcony door is locked before leaving. Have a great stay!</p>
-        </div>
-        <div class="card">
-            <h3>House Details</h3>
-            <p><strong>Wifi:</strong> BeachGuest_5G</p>
-            <p><strong>Password:</strong> sandcastle2026</p>
-        </div>
-    </section>
-
-    <section id="tab-chat" class="tab-view hidden">
-        <div class="card">
-            <div id="chat-window"></div>
-            <div style="display:flex; gap:10px; margin-top:15px;">
-                <input type="text" id="chat-input" placeholder="Text message" style="flex:1; border: 1px solid #ddd; border-radius: 20px; padding: 10px 15px;">
-                <button id="btn-send" style="background: var(--ios-blue); color:white; border:none; width:40px; height:40px; border-radius:50%;">↑</button>
-            </div>
-        </div>
-    </section>
-
-    <section id="tab-services" class="tab-view hidden">
-        <div class="card">
-            <h3>Maintenance</h3>
-            <textarea id="service-input" rows="3" placeholder="Describe the issue..."></textarea>
-            <button class="btn-primary" id="btn-submit-service" style="margin-top:10px;">Submit Request</button>
-        </div>
-        <button class="btn-outline" id="btn-checkout" style="color: var(--danger); border-color: var(--danger);">Checkout Early</button>
-    </section>
-</main>
-
-<nav class="bottom-nav" id="app-nav">
-    <button class="nav-btn active" onclick="showTab('home', this)">
-        <span class="nav-icon">🏠</span>Home
-    </button>
-    <button class="nav-btn" onclick="showTab('chat', this)">
-        <span class="nav-icon">💬</span>Messages
-    </button>
-    <button class="nav-btn" onclick="showTab('services', this)">
-        <span class="nav-icon">🛠️</span>Services
-    </button>
-</nav>
-
 <script>
-const supabase = supabase.createClient(
-    'https://ofnlpqfscyecatetnuqi.supabase.co',
-    'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc'
-);
+const SUPABASE_URL = 'YOUR_SUPABASE_URL';
+const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY';
+const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-let guestData = null;
+let family = null;
 
-// Display current date
-document.getElementById('current-date').innerText = new Date().toLocaleDateString('en-US', { weekday: 'long', month: 'short', day: 'numeric' });
+// Display local time
+function updateTime(){
+  const now = new Date();
+  document.getElementById('time').innerText = now.toLocaleTimeString('en-US', {timeZone:'America/Los_Angeles'});
+}
+setInterval(updateTime,1000);
+updateTime();
 
-async function init() {
-    const today = new Date().toISOString().split('T')[0];
-    
-const { data, error } = await supabase
-    .from('guests')
-    .select('*')
-    .lte('start_date', today)   // guest started on or before today
-    .gte('end_date', today)     // guest ends on or after today
-    .eq('active', true)
-    .maybeSingle();
-
-
-    if(error || !data) {
-        document.body.innerHTML = "<div style='padding:50px; text-align:center;'>No active guest found for today.</div>";
-        return;
-    }
-
-    guestData = data;
-
-    if(guestData.verification_status === 'pending') {
-        document.getElementById('verification-overlay').classList.remove('hidden');
-        document.getElementById('name-placeholder').innerText = guestData.guest_last_name;
-    } else if(guestData.verification_status === 'locked') {
-        showLockedScreen();
-    }
-
-    loadMessages();
-    subscribeToMessages();
+// Prompt last name on first visit
+async function verifyFamily(){
+  const lastName = prompt("Enter your last name:");
+  const { data, error } = await supabase
+      .from('families')
+      .select('*')
+      .eq('last_name', lastName)
+      .maybeSingle();
+  if(!data){ alert("Family not found"); return verifyFamily(); }
+  family = data;
+  
+  const isCorrect = confirm(`Welcome, ${family.last_name}s!\nIs this correct?`);
+  if(!isCorrect){
+    document.body.innerHTML = "<h1>Tablet locked. Please ask host.</h1>";
+    return;
+  }
+  
+  loadDashboard();
 }
 
-// Tab Switching
-function showTab(tabId, btn) {
-    document.querySelectorAll('.tab-view').forEach(t => t.classList.add('hidden'));
-    document.getElementById('tab-' + tabId).classList.remove('hidden');
-    document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-    btn.classList.add('active');
+// Load guest dashboard
+async function loadDashboard(){
+  document.getElementById('welcome').innerText = `Welcome, ${family.last_name}s!`;
 
-    if(tabId === 'chat') {
-        const win = document.getElementById('chat-window');
-        win.scrollTop = win.scrollHeight;
-    }
+  // Calendar
+  const calendarDiv = document.getElementById('calendar');
+  calendarDiv.innerHTML = '';
+  const start = new Date(family.check_in_date);
+  const end = new Date(family.check_out_date);
+  const today = new Date();
+  let cur = new Date(start);
+  while(cur <= end){
+    const dot = document.createElement('div');
+    dot.classList.add('dot');
+    if(cur < today.setHours(0,0,0,0)) dot.classList.add('past');
+    else if(cur.toDateString() === new Date().toDateString()) dot.classList.add('current');
+    else dot.classList.add('upcoming');
+    calendarDiv.appendChild(dot);
+    cur.setDate(cur.getDate()+1);
+  }
+
+  // Days left
+  const daysLeft = Math.ceil((new Date(family.check_out_date)-new Date())/(1000*60*60*24));
+  document.getElementById('days-left').innerText = `You have ${daysLeft} days left at the beach house.`;
+
+  // Listen to announcements
+  supabase.from('announcements').on('INSERT', payload=>{
+    const ann = document.getElementById('announcement');
+    ann.innerText = payload.new.message;
+    ann.style.display='block';
+  }).subscribe();
+
+  // Load and listen to messages
+  const chatDiv = document.getElementById('chat');
+  const { data:msgs } = await supabase.from('messages').select('*').eq('family_id', family.id);
+  msgs.forEach(m=>chatDiv.innerHTML+=`<div><b>${m.sent_by}:</b> ${m.message}</div>`);
+
+  supabase.from(`messages:family_id=eq.${family.id}`).on('INSERT', payload=>{
+    chatDiv.innerHTML+=`<div><b>${payload.new.sent_by}:</b> ${payload.new.message}</div>`;
+  }).subscribe();
+
+  document.getElementById('send-msg').onclick=async()=>{
+    const msg = document.getElementById('msg-input').value;
+    if(!msg) return;
+    await supabase.from('messages').insert({family_id: family.id, message: msg, sent_by:'guest'});
+    document.getElementById('msg-input').value='';
+  }
 }
 
-// Messages
-async function loadMessages() {
-    if(!guestData) return;
-    const { data } = await supabase.from('messages')
-        .select('*')
-        .eq('guest_id', guestData.id)
-        .order('created_at', { ascending:true });
-
-    const win = document.getElementById('chat-window');
-    win.innerHTML = data.map(m => {
-        const time = new Date(m.created_at).toLocaleTimeString([], { hour: '2-digit', minute:'2-digit' });
-        return `<div class="message ${m.sender_type==='host'?'host':'guest'}">${m.message_text}<span class="timestamp">${time}</span></div>`;
-    }).join('');
-    win.scrollTop = win.scrollHeight;
-}
-
-function subscribeToMessages() {
-    supabase.channel('realtime-msgs').on('postgres_changes', 
-        { event: 'INSERT', schema: 'public', table: 'messages', filter: `guest_id=eq.${guestData.id}` },
-        () => loadMessages()
-    ).subscribe();
-}
-
-// Buttons
-document.getElementById('btn-verify-yes').onclick = async () => {
-    await supabase.from('guests').update({ verification_status:'verified', checked_in:true }).eq('id', guestData.id);
-    document.getElementById('verification-overlay').classList.add('hidden');
-};
-
-document.getElementById('btn-verify-no').onclick = async () => {
-    await supabase.from('guests').update({ verification_status:'locked' }).eq('id', guestData.id);
-    showLockedScreen();
-};
-
-document.getElementById('btn-send').onclick = async () => {
-    const input = document.getElementById('chat-input');
-    if(!input.value.trim()) return;
-    await supabase.from('messages').insert({ guest_id: guestData.id, message_text: input.value, sender_type:'guest' });
-    input.value = '';
-};
-
-document.getElementById('btn-submit-service').onclick = async () => {
-    const text = document.getElementById('service-input').value;
-    if(!text) return;
-    await supabase.from('work_requests').insert({ guest_id: guestData.id, request_text:text });
-    alert("Maintenance has been notified.");
-    document.getElementById('service-input').value = '';
-};
-
-document.getElementById('btn-checkout').onclick = async () => {
-    await supabase.from('guests').update({ active:false }).eq('id', guestData.id);
-    alert("Checked out successfully!");
-    location.reload();
-};
-
-function showLockedScreen() {
-    const overlay = document.getElementById('verification-overlay');
-    overlay.classList.remove('hidden');
-    overlay.innerHTML = `<div class="card" style="text-align:center;"><h2 style="color:var(--danger);">Tablet Locked</h2><p>Access restricted. Contact the property manager.</p></div>`;
-}
-
-init();
+verifyFamily();
 </script>
 </body>
 </html>
